2010-09-09  shawn boles  <shawn.boles@gmail.com>  (tiny change)

	* url-cookie.el (url-cookie-expired-p): Simplify and fix.  (Bug#6957)

2010-07-26  Michael Albinus  <michael.albinus@gmx.de>

	* url-http (url-http-parse-headers): Disable file name handlers at
	all (not only Tramp).  (Bug#6717)

2010-07-25  Michael Albinus  <michael.albinus@gmx.de>

	* url-http (url-http-parse-headers): Disable Tramp.  (Bug#6717)

2010-06-12  Štěpán Němec  <stepnem@gmail.com>  (tiny change)

	* url-vars.el (url-privacy-level): Fix doc typo.  (Bug#6406)

2010-05-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* url-util.el (url-unhex-string): Don't accidentally decode as latin-1.

2010-05-07  Chong Yidong  <cyd@stupidchicken.com>

	* Version 23.2 released.

2010-01-23  Chong Yidong  <cyd@stupidchicken.com>

	* url-util.el: Require url-vars (Bug#5459).

2009-11-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* url-parse.el (url-generic-parse-url): Bind deactivate-mark.

2009-11-08  Kai Tetzlaff  <kai.tetzlaff@web.de>  (tiny change)

	* url-http.el (url-http-handle-authentication): Use proxy server,
	if any, for authentication (Bug#4883).

2009-11-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* url-util.el (url-insert-entities-in-string):
	* url-nfs.el (url-nfs-unescape):
	* url-ldap.el (url-ldap):
	* url-imap.el (url-imap):
	* url-cid.el (url-cid-gnus, url-cid): Use with-current-buffer.

2009-10-01  Glenn Morris  <rgm@gnu.org>

	* url-http.el (url-dav-file-attributes): Fix declaration.

2009-09-13  Chong Yidong  <cyd@stupidchicken.com>

	* url-handlers.el (url-copy-file): Add fifth arg for compatibility
	with 2005-06-25 change to copy-file (Bug#4410).

2009-09-13  Glenn Morris  <rgm@gnu.org>

	* url-file.el (url-file): Avoid assignment to free variable `filename'.

2009-09-12  Chong Yidong  <cyd@stupidchicken.com>

	* url-methods.el (url-scheme--registering-proxy): New variable.
	(url-scheme-register-proxy, url-scheme-get-property): Avoid